--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   
 # command to run tests
 script:
-  - python -m pytest --cov
+  - python -m pytest tests/
 
 after_success:
 - coveralls
