--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,12 @@ colorama==0.4.1
 coverage==4.5.2
 coveralls==1.5.1
 docopt==0.6.2
+flasgger==0.9.1
 Flask==1.0.2
+Flask-JWT==0.3.2
+Flask-JWT-Extended==3.13.1
+Flask-JWT-Simple==0.0.3
+Flask-Login==0.4.1
 idna==2.8
 isort==4.3.4
 itsdangerous==1.1.0
