--- a/requirements.txt
+++ b/requirements.txt
@@ -14,19 +14,25 @@ Flask-JWT==0.3.2
 Flask-JWT-Extended==3.13.1
 Flask-JWT-Simple==0.0.3
 Flask-Login==0.4.1
+gunicorn==19.9.0
 idna==2.8
 isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10
+jsonschema==2.6.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
+mistune==0.8.4
 more-itertools==4.3.0
+nose==1.3.7
 pep8==1.7.1
 pluggy==0.8.0
 py==1.7.0
+PyJWT==1.4.2
 pylint==2.2.2
 pytest==4.0.2
+PyYAML==3.13
 requests==2.21.0
 six==1.12.0
 urllib3==1.24.1
