--- a/.coveragerc
+++ b/.coveragerc
@@ -8,5 +8,8 @@ omit =
     */home/travis/virtualenv/*
     */usr/lib/python3/*
     */__init__.py
+    */api/errors.py
+    */api/helpers/*
     tests/*
-    */models.py
+    */run.py
+    */config.py
