--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 astroid==2.1.0
 atomicwrites==1.2.1
 attrs==18.2.0
+autopep8==1.4.3
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
@@ -29,6 +30,7 @@ nose==1.3.7
 pep8==1.7.1
 pluggy==0.8.0
 py==1.7.0
+pycodestyle==2.4.0
 PyJWT==1.4.2
 pylint==2.2.2
 pytest==4.0.2
